--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -1917,11 +1917,14 @@ Post Detail
   border: 2px solid var(--orange-57)
 }
 
-.post-detail-container {
+.post-detail-main-container {
   min-height: 100vh;
   width: 90%;
-  max-width: 1200px;
   margin: 0 auto;
+  max-width: 1200px;
+}
+
+.post-detail-container {
   display: grid;
   align-content: start;
   gap: 2rem;
@@ -1946,27 +1949,25 @@ Post Detail
 }
 
 .post-detail-container__post-detail {
-  position: relative;
   display: grid;
   align-items: start;
   padding: 1rem;
   gap: 1rem;
+  margin-top: 1rem;
+  border: 1px solid var(--black-80);
   border-radius: 8px;
-  box-shadow: 3px 3px 10px -1px rgb(170, 170, 170);
+}
+
+.post-detail-container__post-image{
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 .post-detail-container__text-contents {
   display: grid;
   align-content: start;
   gap: 0.8rem;
-}
-
-.post-detail-container__post-image{
-  width: 100%;
-  height: 100%;
-  aspect-ratio: 4/3;
-  object-fit: cover;
-  display: block;
 }
 
 .post-detail-container__post-title {
@@ -1985,50 +1986,90 @@ Post Detail
 .post-detail-container__like-and-reply {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 1.5rem;
 }
 
+/* Post detail like */
 .post-detail-container__post-like {
   display: flex;
   align-items: center;
   gap: 0.3rem;
-  letter-spacing: 0.05rem;
-  margin-bottom: 0.2rem;
-  background: none;
+  color: var(--black-40);
   border: none;
+  background: none;
   cursor: pointer;
-  transition: 100ms color linear;
+  border-bottom: 2px solid transparent;
+  transition: color 100ms  linear;
 }
 
 .post-detail-like {
-  color: rgb(131, 131, 131);
   font-size: 1.2rem;
   
-}
-
-@media (hover) {
-  .post-detail-container__post-like:hover {
-    color: rgb(206, 16, 206);
-    background: rgb(255, 214, 255)
-  }
-  .post-detail-reply:hover {
-    color: rgb(206, 16, 206);
-    background: rgb(253, 228, 253)
-  }
-  .post-detail-edit:hover {
-    color: rgb(206, 16, 206);
-    background: rgb(253, 228, 253)
-  }
 }
 
 .post-detail-like-count,
 .post-detail-like-count-text {
   font-size: 0.9rem;
-  color: rgb(143, 143, 143);
-  padding-top: 0.2rem
+}
+/* end */
+
+/* post num of comments */
+.post-detail-container__num-of-replies-container {
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+  color: var(--black-40);
+  border-bottom: 2px solid transparent;
 }
 
-.post-detail-edit {
+.post-detail-container__num-of-post {
+  font-size: 1.1rem;
+}
+
+.post-detail-container__reply-count,
+.post-detail-container__reply-text {
+  font-size: 0.9rem;
+}
+/* end */
+
+/* post detail reply btn */
+.post-detail-reply {
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+  color: var(--black-40);
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1.05rem;
+  transition: color 100ms  linear;
+  border-bottom: 2px solid transparent;
+}
+
+.post-detail-reply-btn {
+  font-size: 1.1rem;
+}
+
+.post-detail-reply-text {
+  font-size: 0.9rem;
+}
+
+@media (hover) {
+  .post-detail-container__post-like:hover {
+    color: var(--orange-57);
+  }
+  .post-detail-reply:hover {
+    color: var(--orange-57);
+  }
+  /* .post-detail-edit:hover {
+    color: rgb(206, 16, 206);
+    background: rgb(253, 228, 253)
+  } */
+}
+
+/* end */
+
+/* .post-detail-edit {
   display: flex;
   align-items: center;
   gap: 0.3rem;
@@ -2047,60 +2088,42 @@ Post Detail
 .post-detail-edit-text {
   font-size: 0.9rem;
   color: rgb(143, 143, 143);
-}
+} */
 
-.post-detail-reply {
-  display: flex;
-  align-items: center;
-  gap: 0.3rem;
-  background: none;
-  border: none;
-  cursor: pointer;
-  font-size: 1.05rem;
-  color: rgb(131, 131, 131);
-  transition: 100ms color linear;
-}
-
-.post-detail-reply-text {
-  font-size: 0.9rem;
-}
-
-.reply-form-container {
+.comment-form-container {
   display: grid;
-  padding: 1.5rem;
+  padding: 1.3rem;
   border-radius: 8px;
-  background: white;
-  box-shadow: 3px 3px 10px -1px rgb(170, 170, 170);
+  border: 1px solid var(--black-80);
 }
 
-.reply-form {
+.comment-form {
   width: 100%;
   display: grid;
   gap: 1rem;
 }
 
-.reply-form-textarea {
-  resize: none;
+.comment-form-textarea {
+  resize: vertical;
   border-radius: 8px;
-  padding: 1rem 1.5rem;
   font-size: 1rem;
   letter-spacing: 0.07rem;
   line-height: 1.6;
-  border: 1px solid lightgray;
+  overflow-y: scroll;
+  border: none;
 }
 
-.reply-form-textarea:focus {
-  outline: 2px solid rgb(170, 197, 255);
-  border: 1px solid transparent
+.comment-form-textarea:focus {
+  outline: none;
 }
 
-.reply-btns {
+.comment-btns {
   justify-self: end;
   display: flex;
   align-items: center;
   gap: 0.5rem
 }
-.reply-btn-submit {
+.comment-btn-submit {
   padding: 0.4rem 1rem;
   background: orangered;
   color: white;
@@ -2110,7 +2133,7 @@ Post Detail
   border: none;
 }
 
-.reply-btn-cancel {
+.comment-btn-cancel {
   padding: 0.4rem 1rem;
   background: rgb(71, 71, 71);
   color: white;
@@ -2123,15 +2146,17 @@ Post Detail
 .replied-posts {
   display: grid;
   gap: 1rem;
+  background: #e7d2bc;
+  padding: 2rem;
+  border-radius: 8px;
 }
 
 .replied-post {
   display: grid;
   gap: 1rem;
+  background: #ebded1;
   padding: 1.5rem;
   border-radius: 8px;
-  background: rgb(255, 255, 255);
-  box-shadow: 3px 3px 6px -1px rgb(170, 170, 170);
 }
 
 .replied-post-user-date {
@@ -2169,28 +2194,60 @@ Post Detail
 }
 
 .no-replied-post-container {
+  display: flex;
+  align-items: start;
+  width: 90%;
+  max-width: 500px;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 2rem;
+}
+
+.no-comment-text-container {
   display: grid;
   gap: 1rem;
 }
 
-.no-replied-post-container > h4 {
-  color: var(--black-30);
+.no-comment-text-container > h3 {
+  color: var(--orange-10);
   font-weight: 600;
-  text-align: center;
-  line-height: 1;
-  font-size: 1.1rem;
+  line-height: 1.2;
   letter-spacing: 0.05rem;
+  font-size: 1.3rem;
+}
+
+.no-comment-text-container > p {
+  letter-spacing: 0.07rem;
+  line-height: 1.5;
+  text-wrap: pretty;
+  color: var(--orange-20);
 }
 
 @media screen and (min-width: 700px) {
+
   .post-detail-container__post-detail {
     display: flex;
-    align-items: start;
     gap: 2rem
   }
 
+  .post-detail-container__post-image-container {
+    flex: 1;
+  }
+
   .post-detail-container__post-image{
-    width: 300px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .post-detail-container__text-contents {
+      flex: 2
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .post-detail-container {
+    padding: 4rem 0;
   }
 }
 
