--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -28,7 +28,9 @@
 
   /* Orange */
   --orange-10: hsl(10, 30%, 20%);
+  --orange-15: hsl(10, 30%, 25%);
   --orange-20: hsl(10, 30%, 30%);
+  --orange-25: hsl(10, 30%, 35%);
   --orange-30: hsl(10, 30%, 40%);
 
   /* input && textarea focus */
@@ -156,6 +158,13 @@ textarea {
 ============
 Landing Page
 ============ */
+.landing-page-header {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background: var(--orange-15);
+}
+
 .landing-page-navbar-container {
   width: 90%;
   margin: 0 auto;
@@ -167,7 +176,7 @@ Landing Page
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
-  padding: 1rem 0;
+  padding: 0.8rem 0;
 }
 
 .landing-page-navbar-brand-link {
@@ -187,14 +196,14 @@ Landing Page
   object-fit: cover;
   border-radius: 50%;
   display: block;
-  background: hsl(0, 0%, 20%);
+  background: var(--orange-25);
   padding: 0.3rem
 }
 
 .landing-page-navbar-brand-name {
   font-size: 1.6rem;
   font-weight: 600;
-  color: var(--orange-10);
+  color: white;
   line-height: 0;
 }
 
@@ -238,6 +247,10 @@ Landing Page
   max-width: 250px;
 }
 
+.landing-page-show-navlink-btn {
+  color: white;
+}
+
 .landing-page-hide-navlink-btn {
   width: 100%;
   display: flex;
@@ -251,12 +264,16 @@ Landing Page
   color: var(--orange-20);
   font-size: 1rem;
   padding: 0 2rem;
-  border-bottom: 2px solid transparent;
+  text-align: start;
 }
 
 @media (hover) {
   .landing-page-navlink:hover {
-    color: rgb(240, 62, 8);
+    color: rgb(255, 107, 62) !important;
+  }
+  
+  .landing-page-login-btn:hover {
+    color: white !important
   }
 }
 
@@ -267,28 +284,42 @@ Landing Page
 
 .mobile-landing-page-hero-wrapper {
   background: linear-gradient(
-    to bottom, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), 
+    to bottom, hsla(0, 0%, 0%, 0.65), hsla(0, 0%, 0%, 0.65)), 
     url('./images/mobile_landing_page.webp');
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
   display: grid;
-  height: calc(80vh - 77px);
-  padding-bottom: 3rem;
+  align-items: stretch;
+  height: calc(70dvh);
 }
 
 .mobile-landing-page-hero-text-wrapper {
   width: 90%;
-  max-width: 500px;
   margin: 0 auto;
   display: grid;
   gap: 1rem;
-  align-content: end;
-  text-align: center;
+  align-content: center;
+  text-align: start;
+  padding-top: 7rem;
+}
+
+.mobile-landing-page-hero-text-wrapper > * {
+  max-width: 300px;
+}
+
+@media (min-width: 479px) {
+  .mobile-landing-page-hero-header {
+    max-width: 500px;
+  }
+
+  .mobile-landing-page-hero-paragraph {
+    max-width: 400;
+  }
 }
 
 .mobile-landing-page-hero-header {
-  font-size: clamp(2.3rem, 5vw + 1rem, 4rem);
+  font-size: clamp(2rem, 5vw + 1rem, 4rem);
   text-wrap: pretty;
   line-height: 1.2;
   color: white;
@@ -299,21 +330,18 @@ Landing Page
   letter-spacing: 0.05rem;
   line-height: 1.5;
   text-wrap: pretty;
-  font-size: clamp(1.05rem, 1vw + 0.5rem, 1.2rem);
+  font-size: clamp(1rem, 1vw + 0.5rem, 1.2rem);
 }
 
 .mobile-landing-page-join-btn {
-  padding: 0.8rem 2rem ;
+  justify-self: start;
+  padding: 0.6rem 1.5rem ;
   text-align: center;
   background: hsl(7, 100%, 54%);
   color: hsl(0, 0%, 100%);
   border-radius: 5px;
   letter-spacing: 0.05rem;
   font-weight: 500;
-  width: 100%;
-  max-width: 300px;
-  margin: 0 auto;
-  margin-top: 1.5rem;
 }
 
 /* Featured posts */
@@ -841,14 +869,15 @@ Landing Page
 
   .landing-page-navlink {
     padding: 0;
+    color: white !important;
   }
 
   .landing-page-login-btn {
     border: 1px solid hsl(7, 100%, 54%);
-    padding: 0.4rem 2rem;
+    padding: 0.4rem 1.5rem;
     border-radius: 5px;
     background: var(--orange-57);
-    color: white;
+    color: white !important;
   }
 
 }
@@ -963,7 +992,7 @@ Landing Page
   .lg-landing-page-hero-wrapper {
     display: block;
     min-height: 75vh;
-    background: linear-gradient(to bottom, hsla(0, 0%, 0%, 0.55), hsla(22, 61%, 7%, 0.55)),
+    background: linear-gradient(to bottom, hsla(0, 0%, 0%, 0.65), hsla(0, 0%, 0%, 0.65)),
     url('./images/landing_page.webp');
     background-position: right;
     background-repeat: no-repeat;
@@ -1006,7 +1035,7 @@ Landing Page
 
   .landing-page-join-btn {
     justify-self: start;
-    padding: 0.7rem 3rem;
+    padding: 0.8rem 2.5rem;
     text-align: center;
     background: hsl(7, 100%, 54%);
     color: hsl(0, 0%, 100%);
@@ -1124,10 +1153,17 @@ Landing Page
 ======
 NAVBAR 
 ====== */
-.navbar-container {
-  position: relative;
+.main-header {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background: var(--orange-15);
 }
 
+.navbar-container {
+  position: relative;
+
+}
 .navbar-wrapper {
   width: 90%;
   max-width: 1200px;
@@ -1135,7 +1171,7 @@ NAVBAR
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem 0;
+  padding: 0.8rem 0;
 }
 
 .navbar-brand-link {
@@ -1155,14 +1191,14 @@ NAVBAR
   object-fit: cover;
   border-radius: 50%;
   display: block;
-  background: hsl(0, 0%, 20%);
+  background: var(--orange-25);
   padding: 0.3rem
 }
 
 .navbar-brand-name {
   font-size: 1.6rem;
   font-weight: 600;
-  color: var(--orange-10);
+  color: white;
   line-height: 0;
 }
 
@@ -1170,7 +1206,7 @@ NAVBAR
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--black-30);
+  color: white;
   background: none;
   border: none;
   font-size: 1.8rem;
@@ -1229,7 +1265,7 @@ NAVBAR
 }
 
 .navbar-active-navlink {
-  color: rgb(240, 62, 8);
+  color: var(--orange-57);
   font-weight: 600;
 }
 .navbar-navlink-logout-btn-container {
@@ -1275,16 +1311,17 @@ NAVBAR
   .navbar-navlink {
     text-wrap: nowrap;
     padding: 0;
+    color: white;
   }
 
   .navbar-active-navlink {
-    color: rgb(240, 62, 8) !important;
+    color: rgb(255, 107, 62) !important;
     font-weight: 600;
   }
 
   @media (hover) {
     .navbar-navlink:hover {
-      color: rgb(240, 62, 8);
+      color: rgb(255, 107, 62);
     }
   }
 }
@@ -1584,6 +1621,7 @@ Topics
 }
 
 @media screen and (min-width: 900px) {
+
   .topics-main-container {
     display: flex;
     padding: 4rem 0;
